// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login actions should create an action for a successful login 1`] = `
Object {
  "payload": Object {
    "token": "token",
    "username": "username",
  },
  "type": "LOGIN_SUCCESS",
}
`;

exports[`login actions should create an action for a successful user profile load 1`] = `
Object {
  "payload": Object {
    "displayName": "displayName",
    "photo": "photo",
  },
  "type": "LOGIN_PROFILE_SUCCESS",
}
`;

exports[`login actions should create an action to load the user profile 1`] = `
Object {
  "payload": Object {
    "token": "token",
  },
  "type": "LOGIN_PROFILE",
}
`;

exports[`login actions should create an action to log the user in 1`] = `
Object {
  "payload": Object {
    "pass": "password",
    "user": "username",
  },
  "type": "LOGIN_LOGIN",
}
`;

exports[`login actions should create an action to log the user out 1`] = `
Object {
  "type": "LOGIN_LOGOUT",
}
`;
